--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,12 +15,12 @@ body {
 }
 
 a {
-  color: #1977cc;
+  color: #505eb4;
   text-decoration: none;
 }
 
 a:hover {
-  color: #3291e6;
+  color: #37407c;
   text-decoration: none;
 }
 
@@ -52,7 +52,7 @@ h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #1977cc;
+  border: 6px solid #505eb4;
   border-top-color: #d1e6f9;
   border-radius: 50%;
   width: 60px;
@@ -80,7 +80,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #1977cc;
+  background: #505eb4;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -94,7 +94,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #298ce5;
+  background: #37407c;
   color: #fff;
 }
 
@@ -124,16 +124,16 @@ h6 {
 
 #topbar .contact-info a {
   line-height: 1;
-  color: #444444;
+  color: #505eb4;
   transition: 0.3s;
 }
 
 #topbar .contact-info a:hover {
-  color: #1977cc;
+  color: #37407c;
 }
 
 #topbar .contact-info i {
-  color: #1977cc;
+  color: #505eb4;
   padding-right: 4px;
   margin-left: 15px;
   line-height: 0;
@@ -144,7 +144,7 @@ h6 {
 }
 
 #topbar .social-links a {
-  color: #437099;
+  color: #505eb4;
   padding-left: 15px;
   display: inline-block;
   line-height: 1px;
@@ -152,7 +152,7 @@ h6 {
 }
 
 #topbar .social-links a:hover {
-  color: #1977cc;
+  color: #37407c;
 }
 
 #topbar .social-links a:first-child {
@@ -186,7 +186,7 @@ h6 {
 }
 
 #header .logo a {
-  color: #2c4964;
+  color: #505eb4/* #2c4964; */
 }
 
 #header .logo img {
@@ -198,7 +198,7 @@ h6 {
 */
 .appointment-btn {
   margin-left: 25px;
-  background: #1977cc;
+  background: #505eb4;
   color: #fff;
   border-radius: 50px;
   padding: 8px 25px;
@@ -209,7 +209,7 @@ h6 {
 }
 
 .appointment-btn:hover {
-  background: #166ab5;
+  background: #37407c;
   color: #fff;
 }
 
@@ -254,7 +254,7 @@ h6 {
   align-items: center;
   justify-content: space-between;
   font-size: 14px;
-  color: #2c4964;
+  color: #505eb4;
   white-space: nowrap;
   transition: 0.3s;
   border-bottom: 2px solid #fff;
@@ -272,8 +272,8 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #1977cc;
-  border-color: #1977cc;
+  color: #505eb4;
+  border-color: #505eb4;
 }
 
 .navbar .dropdown ul {
@@ -300,7 +300,7 @@ h6 {
   font-size: 14px;
   font-weight: 500;
   text-transform: none;
-  color: #082744;
+  color: #505eb4;
   border: none;
 }
 
@@ -311,7 +311,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #1977cc;
+  color: #505eb4;
 }
 
 .navbar .dropdown:hover>ul {
@@ -347,7 +347,7 @@ h6 {
 * Mobile Navigation 
 */
 .mobile-nav-toggle {
-  color: #2c4964;
+  color: #505eb4;
   font-size: 28px;
   cursor: pointer;
   display: none;
@@ -408,14 +408,14 @@ h6 {
 .navbar-mobile a:focus {
   padding: 10px 20px;
   font-size: 15px;
-  color: #2c4964;
+  color: #505eb4;
   border: none;
 }
 
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #1977cc;
+  color: #505eb4;
 }
 
 .navbar-mobile .getstarted,
@@ -450,7 +450,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #1977cc;
+  color: #505eb4;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -478,11 +478,11 @@ h6 {
   font-weight: 700;
   line-height: 56px;
   text-transform: uppercase;
-  color: #2c4964;
+  color: #505eb4;
 }
 
 #hero h2 {
-  color: #2c4964;
+  color: #505eb4;
   margin: 10px 0 0 0;
   font-size: 24px;
 }
@@ -499,11 +499,11 @@ h6 {
   border-radius: 50px;
   transition: 0.5s;
   color: #fff;
-  background: #1977cc;
+  background: #505eb4;
 }
 
 #hero .btn-get-started:hover {
-  background: #3291e6;
+  background: #37407c;
 }
 
 @media (min-width: 1024px) {
@@ -583,7 +583,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #1977cc;
+  background: #505eb4;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -659,7 +659,7 @@ section {
 --------------------------------------------------------------*/
 .why-us .content {
   padding: 30px;
-  background: #1977cc;
+  background: #505eb4;
   border-radius: 4px;
   color: #fff;
 }
@@ -688,7 +688,7 @@ section {
 }
 
 .why-us .content .more-btn:hover {
-  color: #1977cc;
+  color: #505eb4;
   background: #fff;
 }
 
@@ -703,7 +703,7 @@ section {
 
 .why-us .icon-boxes .icon-box i {
   font-size: 40px;
-  color: #1977cc;
+  color: #505eb4;
   margin-bottom: 30px;
 }
 
@@ -751,13 +751,13 @@ section {
 }
 
 .about .icon-box .icon i {
-  color: #1977cc;
+  color: #505eb4;
   font-size: 32px;
 }
 
 .about .icon-box:hover .icon {
-  background: #1977cc;
-  border-color: #1977cc;
+  background: #505eb4;
+  border-color: #505eb4;
 }
 
 .about .icon-box:hover .icon i {
@@ -777,7 +777,7 @@ section {
 }
 
 .about .icon-box .title a:hover {
-  color: #1977cc;
+  color: #505eb4;
 }
 
 .about .icon-box .description {
@@ -795,7 +795,7 @@ section {
 .about .play-btn {
   width: 94px;
   height: 94px;
-  background: radial-gradient(#1977cc 50%, rgba(25, 119, 204, 0.4) 52%);
+  background: radial-gradient(#505eb4 50%, rgba(25, 119, 204, 0.4) 52%);
   border-radius: 50%;
   display: block;
   position: absolute;
@@ -838,7 +838,7 @@ section {
 }
 
 .about .play-btn:hover::after {
-  border-left: 15px solid #1977cc;
+  border-left: 15px solid #505eb4;
   transform: scale(20);
 }
 
@@ -893,7 +893,7 @@ section {
   left: 50%;
   transform: translateX(-50%);
   font-size: 20px;
-  background: #1977cc;
+  background: #505eb4;
   color: #fff;
   border-radius: 50px;
   display: inline-flex;
@@ -931,7 +931,7 @@ section {
   margin: 0 auto;
   width: 64px;
   height: 64px;
-  background: #1977cc;
+  background: #505eb4;
   border-radius: 5px;
   transition: all 0.3s ease-out 0s;
   display: flex;
@@ -976,8 +976,8 @@ section {
 }
 
 .services .icon-box:hover {
-  background: #1977cc;
-  border-color: #1977cc;
+  background: #505eb4;
+  border-color: #505eb4;
 }
 
 .services .icon-box:hover .icon {
@@ -985,11 +985,11 @@ section {
 }
 
 .services .icon-box:hover .icon i {
-  color: #1977cc;
+  color: #505eb4;
 }
 
 .services .icon-box:hover .icon::before {
-  background: #3291e6;
+  background: #37407c;
 }
 
 .services .icon-box:hover h4 a,
@@ -1069,7 +1069,7 @@ section {
 .appointment .php-email-form input:focus,
 .appointment .php-email-form textarea:focus,
 .appointment .php-email-form select:focus {
-  border-color: #1977cc;
+  border-color: #505eb4;
 }
 
 .appointment .php-email-form input,
@@ -1082,7 +1082,7 @@ section {
 }
 
 .appointment .php-email-form button[type=submit] {
-  background: #1977cc;
+  background: #505eb4;
   border: 0;
   padding: 10px 35px;
   color: #fff;
@@ -1091,7 +1091,7 @@ section {
 }
 
 .appointment .php-email-form button[type=submit]:hover {
-  background: #1c84e3;
+  background: #37407c;
 }
 
 /*--------------------------------------------------------------
@@ -1117,12 +1117,12 @@ section {
 }
 
 .departments .nav-link:hover {
-  color: #1977cc;
+  color: #505eb4;
 }
 
 .departments .nav-link.active {
-  color: #1977cc;
-  border-color: #1977cc;
+  color: #505eb4;
+  border-color: #505eb4;
 }
 
 .departments .tab-pane.active {
@@ -1152,7 +1152,7 @@ section {
 
   .departments .nav-link.active {
     color: #fff;
-    background: #1977cc;
+    background: #505eb4;
   }
 }
 
@@ -1244,7 +1244,7 @@ section {
 }
 
 .doctors .member .social a:hover {
-  background: #1977cc;
+  background: #505eb4;
 }
 
 .doctors .member .social a+a {
@@ -1316,7 +1316,7 @@ section {
 }
 
 .faq .faq-list a.collapsed:hover {
-  color: #1977cc;
+  color: #505eb4;
 }
 
 .faq .faq-list a.collapsed .icon-show {
@@ -1410,11 +1410,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #1977cc;
+  border: 1px solid #505eb4;
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #1977cc;
+  background-color: #505eb4;
 }
 
 @media (max-width: 767px) {
@@ -1465,7 +1465,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #1977cc;
+  color: #505eb4;
   float: left;
   width: 44px;
   height: 44px;
@@ -1500,7 +1500,7 @@ section {
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #1977cc;
+  background: #505eb4;
   color: #fff;
 }
 
@@ -1570,7 +1570,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #1977cc;
+  background: #505eb4;
   border: 0;
   padding: 10px 35px;
   color: #fff;
@@ -1579,7 +1579,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: #1c84e3;
+  background: #37407c;
 }
 
 @keyframes animate-loading {
@@ -1671,7 +1671,7 @@ section {
 
 #footer .footer-top .footer-links ul a:hover {
   text-decoration: none;
-  color: #1977cc;
+  color: #505eb4;
 }
 
 #footer .footer-newsletter {
@@ -1711,14 +1711,14 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #1977cc;
+  background: #505eb4;
   color: #fff;
   transition: 0.3s;
   border-radius: 50px;
 }
 
 #footer .footer-newsletter form input[type=submit]:hover {
-  background: #1c84e3;
+  background: #37407c;
 }
 
 #footer .credits {
@@ -1730,7 +1730,7 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #1977cc;
+  background: #505eb4;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -1743,7 +1743,7 @@ section {
 }
 
 #footer .social-links a:hover {
-  background: #1c84e3;
+  background: #37407c;
   color: #fff;
   text-decoration: none;
 }
